Yaml component for passing in tags and other metadata

--- a/src/pages/blog/2018/January/2018.md
+++ b/src/pages/blog/2018/January/2018.md
@@ -1,9 +1,8 @@
----
-title: '2018'
-author: Matthew Hamlin
-date: 2018-01-16
-tags: ['development', 'recap']
----
+<Yaml
+title="2018"
+date="2018-01-16"
+tags={["development", "recap"]}
+/>
 
 ## 2018 Updates
 
