Using new markdown parser + renderer

--- a/src/pages/blog/2015/December/2015.md
+++ b/src/pages/blog/2015/December/2015.md
@@ -1,8 +1,10 @@
+```!jsx
 <Yaml
 title="2015"
 date="2015-12-31"
 tags={["recap"]}
 />
+```
 
 2015 was a big year for me, I changed a lot about myself internally, and also the settings around me. I began the year focusing on growing social acceptance in terms of followers, friends, and other online interactions. I changed that mindset only a few weeks ago to instead focus on building a value network around me of trusted friends and family.
 
