Finish 2017 and 2018, should be all pages rendering something, need to figure out the html interop story

--- a/src/pages/blog/2018/January/2018.md
+++ b/src/pages/blog/2018/January/2018.md
@@ -1,8 +1,10 @@
+```!jsx
 <Yaml
 title="2018"
 date="2018-01-16"
 tags={["development", "recap"]}
 />
+```
 
 ## 2018 Updates
 
@@ -24,10 +26,10 @@ I still need to fix all the links as well as figure out how to even host it, but
 
 I have started quite a few small projects on GitHub, here is a short list:
 
-1. Resp: [Resp](https://github.com/hamlim/resp)
-2. DS: [DS](https://github.com/hamlim/ds)
-3. app-config [app-config](https://github.com/hamlim/app-config)
-4. React-Lightbox [React-Lightbox](https://github.com/hamlim/React-Lightbox)
+1.  Resp: [Resp](https://github.com/hamlim/resp)
+2.  DS: [DS](https://github.com/hamlim/ds)
+3.  app-config [app-config](https://github.com/hamlim/app-config)
+4.  React-Lightbox [React-Lightbox](https://github.com/hamlim/React-Lightbox)
 
 I am definitely going to be working on far more of these small projects, I am mostly using them to fill in personal needs on other side projects.
 
