--- a/src/pages/blog/2017/January/01-15-17-AI.md
+++ b/src/pages/blog/2017/January/01-15-17-AI.md
@@ -1,8 +1,6 @@
 ## Push vs Pull AI Assistants
 
-
-<img alt="A scene from the movie Her, depicting the main character and his AI" src="/assets/images/posts/ai/her.jpg" style="max-width: 100%; height: auto;" />
-
+![A scene from the movie Her, depicting the main character and his AI](/dist/images/her.jpg)
 
 If you haven't watched the movie <cite>her</cite> I really recommend it, its quite an interesting story exploring a lot of different ideas
 about relationships, AI's and individuality. One of the best parts of the movie was simply the AI, voiced by Scarlett Johansson, which acts
