Moving to reach router, some blog routes working now, need to get the rest of 2017 -> 2015 converted

--- a/src/pages/blog/2018/January/2018.mdx
+++ b/src/pages/blog/2018/January/2018.mdx
@@ -30,3 +30,8 @@ I am definitely going to be working on far more of these small projects, I am mo
 I started Dollar in 2015 as one of my first, and largest, web apps I have worked on outside of work. I want to spend a ton of time in 2018, rebuilding the application using React, and a flux style architecture without redux.
 
 I don't want to force myself to blog a ton in 2018, but I also don't want to turn this website into yet another stale website. So expect a few more learning blog posts and other random things to be built on to this.
+
+import Post from '../../../../components/post-container.js'
+
+export default (props) => <Post date="01/01/2018" {...props}/>
+>
