--- a/src/pages/blog/2018/January/2018.mdx
+++ b/src/pages/blog/2018/January/2018.mdx
@@ -33,5 +33,4 @@ I don't want to force myself to blog a ton in 2018, but I also don't want to tur
 
 import Post from '../../../../components/post-container.js'
 
-export default (props) => <Post date="01/01/2018" {...props}/>
->
+export default props => <Post date="01/01/2018" {...props} />
