--- a/src/pages/blog/2017/January/ai.mdx
+++ b/src/pages/blog/2017/January/ai.mdx
@@ -9,3 +9,7 @@ as an (almost) always on voice for the main character.
 The thing is that the AI in the movie feels like something that is near impossible to actually make in the real world, or at least about
 50 or more years away from becoming a reality. This is even more noticeable when you start to use either Google Assistant, Siri, or even Alexa because
 all of these "AIs" are miles away from being the kind of personality of the AI from her.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/01/2017" {...props} />
