--- a/src/pages/blog/2017/January/twenty-five.mdx
+++ b/src/pages/blog/2017/January/twenty-five.mdx
@@ -9,3 +9,7 @@ make sure to write about it here on my blog and set up a simple tracking system 
 the cost of the plan too.
 
 I have definitely been over-eating recently so this will be important to set in stone and actually follow it. I also need to get out and walk more. This evening when I got back to my apartment it was actually light out so I should have taken advantage and gone for a walk.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/25/2017" {...props} />
