--- a/src/pages/blog/2017/January/twenty-one.mdx
+++ b/src/pages/blog/2017/January/twenty-one.mdx
@@ -4,7 +4,7 @@ Maybe getting the xbox one was a bad idea. I really enjoy playing games with my 
 
 I think the core issue is lack of fundamental backbone to say no to all the distractions.
 
-----
+---
 
 This morning I went to the grocery store and got a ton of steam bag veggies and some turkey as well as gluten free pasta. I plan on
 shifting my diet to a cup of oatmeal in the morning, two soylent drinks and then some veggies for dinner. I will also start tracking my food intake today.
@@ -19,8 +19,7 @@ as some motivation to get my website working properly.
 I am tempted to stop making content for a few weeks as I build it out. Simply to focus on building but I also have so many post ideas that I am
 working on.
 
-
-----
+---
 
 <input type="checkbox" disabled checked/> Ok first things first, dishes need to get done.
 
@@ -37,7 +36,7 @@ Ok so I got something on the page, it took some interesting google searches to w
 I decided to shift over to Webpack 2.2 instead of 1.whatever I was using. It wasn't too bad mainly because I copied the code from My other project that I
 had already moved over to 2.2.
 
-----
+---
 
 I took a break to make some dinner, play some video games, eat dinner and then also get some spare web browsing in.
 
@@ -45,3 +44,7 @@ After all that time I have really realized how absolute shitty my chair is that 
 
 For dinner I had some interesting pasta. I started with Gluten free fusilli, then added 99% lean ground turkey breast, and also added in some different pasta sauce
 than the kind I normally get.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/21/2017" {...props} />
