--- a/src/pages/blog/2017/January/sixteen.mdx
+++ b/src/pages/blog/2017/January/sixteen.mdx
@@ -1,7 +1,6 @@
 Today was an interesting day, first off unlike a lot of other people I had to work today.
 
-----
-
+---
 
 This evening I plan on getting some work down on paper for a new idea I had with a friend of mine,
 long story short its a platform for sharing recommendations with friends and family. Theres a lot of
@@ -15,12 +14,14 @@ just every once and a while.
 
 That is what will be important, sure you can get users to share, but they need to share often.
 
-----
+---
 
 I definitely over-ate for dinner. 🤢
 
-
-----
-
+---
 
 I hate the feeling of incredible boredom and also incredible need to get something done.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/16/2017" {...props} />
