--- a/src/pages/blog/2017/January/twenty-seven.mdx
+++ b/src/pages/blog/2017/January/twenty-seven.mdx
@@ -1,6 +1,6 @@
 So I didn't write yesterday. I wasn't really feeling it. I didn't get any work on my website done either.
 
-----
+---
 
 Today is a different day, yet again we went on our traditional sushi Friday lunch, and yet again I ate way too
 much there.
@@ -20,16 +20,17 @@ my food for the next month in a box labelled Soylent. Thats right, I subscribed 
 next month is going to be like a pilot month for me. I plan on tracking a lot of different things over this next month.
 
 I will be tracking the following:
-* Steps taken
-* Water consumed
-* Amount of soylent consumed
-* Number of hours sleeping
+
+- Steps taken
+- Water consumed
+- Amount of soylent consumed
+- Number of hours sleeping
 
 I also plan on doing the following as well:
-* Go on at least one walk every two days (more than just to and from work)
-* Limit youtube consumption to 2 hours per day
-* Limit gaming time to 4 days a week
 
+- Go on at least one walk every two days (more than just to and from work)
+- Limit youtube consumption to 2 hours per day
+- Limit gaming time to 4 days a week
 
 I of course plan on tracking this on my website, I will be doing it for the first week or two in the form of
 these blog posts. As soon as I have a up and working simple website prototype with my new work I plan on cutting over to
@@ -40,11 +41,15 @@ It won't be anything fancy with a UI to enter in the data but simply for showing
 In the mean time I have a ton of work to get the website up and running and also to start converting all my old blog posts
 to either custom components to render or to markdown files to render.
 
-
 <aside>
   <p>
-    Oh also on a small side note I read a short blog post the other day about using a Service worker to cache blog posts and
-    also render out blog posts from other content. So I might look into that as a way to fake server side rendering for
-    other routes.
+    Oh also on a small side note I read a short blog post the other day about
+    using a Service worker to cache blog posts and also render out blog posts
+    from other content. So I might look into that as a way to fake server side
+    rendering for other routes.
   </p>
 </aside>
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/27/2017" {...props} />
