--- a/src/pages/blog/2017/January/twenty-two.mdx
+++ b/src/pages/blog/2017/January/twenty-two.mdx
@@ -2,3 +2,7 @@ I didn't write today. Mostly slacked around and started work on my new website.
 
 I had a few ideas of things I could develop. Think I will work on one of them after I
 get my website up and running.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="01/01/2017" {...props} />
