Processing first months in 2016

--- a/src/pages/blog/2016/April/redesign.mdx
+++ b/src/pages/blog/2016/April/redesign.mdx
@@ -9,3 +9,7 @@ The last thing I want to add is to talk a bit about what I used for my css. The 
 As I said in the beginning I am using a lot of my own CSS / HTML assets. In fact I am only really using Ion Icons and Normalize.css as my external 3rd party resources. I am sure I could have optimized my site more but as it stands now I am fairly happy with how it works and feels.
 
 As a sidenote, about a month ago I moved all my sites over to Cloudflare in order to setup HTTPS on all my domains. This has been really easy to do and I am happy with how simple it was to actually setup.
+
+import Post from '../../../../components/post-container.js'
+
+export default props => <Post date="04/01/2016" {...props} />
