--- a/src/pages/blog/2016/August/pull-quotes.mdx
+++ b/src/pages/blog/2016/August/pull-quotes.mdx
@@ -7,5 +7,11 @@ I understand a need for developers to make their sites look normal or ordinary. 
 I am not here to say that we should completely drop pull quotes from our writing or from our web layout standards, nor am I saying that we should avoid these deep layout patterns (they make reading really easy for a lot of people). What I do want to say is that pull quotes should be more than just direct copies of a sentence that already exists in the body copy of the article. If you go through and read most of my blog posts, you will undoubtably see a ton of block quotes meant to stand out to the reader. I am proud to say that I have tried to make each and every one of those contain different content that what is found in the body of the post. This is because I want users to quickly read a bit about the article by reading the block quotes, and then if they want to read the article the block quotes offer extra value when reading.
 
 ---
+
 ##### Footnotes:
+
 [^1]: In newspaper’s people would flip through the pages and pull quotes were intended to grab the reader’s attention and pull them into reading the article. I seriously doubt that they were named pull quotes because they wanted to pull the reader in.
+
+import Post from '../../../../components/post-container.js'
+
+export default p => <Post date="08/15/2016" {...p} />
