--- a/src/pages/blog/2016/August/redesign-v5.mdx
+++ b/src/pages/blog/2016/August/redesign-v5.mdx
@@ -5,3 +5,7 @@ The point of the matter is that I have redesigned my website several times over 
 I have officially dropped any need for external resources (css, images, other assets are all locally hosted), and as with the past redesign I have completely cut out any Javascript resources. Of course all this leads to faster lead times which is a great benefit.
 
 One of the things that I also realized along the redesign process was that I will no longer be supporting any browser older than Edge, that means that I am doing no optimization with any of the css to let it work with older browsers. The main reason I am doing this is because I believe writing code to work with older browsers is fairly useless at this point <em>(Sorry <small>not sorry</small> IE8 users)</em>.
+
+import Post from '../../../../components/post-container.js'
+
+export default p => <Post date="08/20/2016" {...p} />
