--- a/src/pages/blog/2016/August/my-new-website.mdx
+++ b/src/pages/blog/2016/August/my-new-website.mdx
@@ -6,31 +6,6 @@ I wanted to start this off with a brief timeline of all the visual changes I hav
 
 The current version of the site, shown below in case it changes in the future, is broken down into basically 4 page types as it is now. The first is the <a href="#image1" class="link">home page</a> the second is <a href="#image2" class="link">my resume</a>, the third is my <a href="#image3" class="link">blog archive</a>, and the fourth is the layout of a <a href="#image4" class="link">blog post</a>.
 
-<figure class="figure" id="image1">
-<img src="../../../../../static/images/posts/landing.png" alt="Landing Page" class="img">
-<figcaption class="horizontal--center">
-    <h5>Landing Page</h5>
-</figcaption>
-</figure>
-<figure class="figure" id="image2">
-<img src="../../../../../static/images/posts/resume.png" alt="Resume Page" class="img">
-<figcaption class="horizontal--center">
-    <h5>Resume Page</h5>
-</figcaption>
-</figure>
-<figure class="figure" id="image3">
-<img src="../../../../../static/images/posts/archive.png" alt="Archive Page" class="img">
-<figcaption class="horizontal--center">
-    <h5>Archive Page</h5>
-</figcaption>
-</figure>
-<figure class="figure" id="image4">
-<img src="../../../../../static/images/posts/post.png" alt="Blog post page" class="img">
-<figcaption class="horizontal--center">
-    Blog post Page
-</figcaption>
-</figure>
-
 ### The Design:
 
 I originally came up with the current basic design in June of this year, having a very simple and minimal landing page really excited me. I wanted to make it very easy for visitors to know just how much I like to keep things minimal.
@@ -49,6 +24,8 @@ For the most part that is the site. Everything is wired up is done by hand, I do
 
 #### Footnotes:
 
-[^1]:
+[^1]: To combat this in the future I plan on making a snapshot branch on Github and forking those out into their separate repos (maybe).
 
-  To combat this in the future I plan on making a snapshot branch on Github and forking those out into their separate repos (maybe).
+import Post from '../../../../components/post-container.js'
+
+export default p => <Post date="08/10/2016" {...p} />
